feat: add background space

--- a/Naas_Create_website.ipynb
+++ b/Naas_Create_website.ipynb
@@ -161,119 +161,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "1a5ec3ab54a14383aecdd7e5c04b7978": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_1f6f2b4c022946d58049a5636770bb7a"
-      }
-     },
-     "1bcb77851ba84780a71bf455823a2d1f": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "1f6f2b4c022946d58049a5636770bb7a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "2f8e808523b1442784e4808d8676bcb4": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "button_style": "primary",
-       "description": "Copy URL",
-       "layout": "IPY_MODEL_ecb68fd951544a27a6f9c1fd77a4b830",
-       "style": "IPY_MODEL_f07750446ed64bac9be9d1f64c1908fa"
-      }
-     },
-     "42364be76efb4aca8a1244a688485d2b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "47e43af83fa8473583c43fb7a73f05f0": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_e40f3a4fbf414c9bae1a9e1ae1d6c03d"
-      }
-     },
-     "52a707b8ed294ab4a5be932726759bda": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "button_style": "primary",
-       "description": "Copy URL",
-       "layout": "IPY_MODEL_5350004656db4df19f9e285375877f3a",
-       "style": "IPY_MODEL_574ca37757984c81a21369e963fedde0"
-      }
-     },
-     "5350004656db4df19f9e285375877f3a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "574ca37757984c81a21369e963fedde0": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "6b72f4f959ca43e09f94a2b12f1f2c8b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "d1ccff4569e14b5f9a72482b9d58424c": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_42364be76efb4aca8a1244a688485d2b"
-      }
-     },
-     "e40f3a4fbf414c9bae1a9e1ae1d6c03d": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ecb68fd951544a27a6f9c1fd77a4b830": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "edc3d5319da544f4b70ed21e7792c45c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonModel",
-      "state": {
-       "button_style": "primary",
-       "description": "Copy URL",
-       "layout": "IPY_MODEL_6b72f4f959ca43e09f94a2b12f1f2c8b",
-       "style": "IPY_MODEL_1bcb77851ba84780a71bf455823a2d1f"
-      }
-     },
-     "f07750446ed64bac9be9d1f64c1908fa": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
