feat: change to my-website to index page

--- a/Naas_Create_website.ipynb
+++ b/Naas_Create_website.ipynb
@@ -25,11 +25,11 @@
    "id": "located-dutch",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-29T23:53:10.933391Z",
-     "iopub.status.busy": "2022-11-29T23:53:10.932969Z",
-     "iopub.status.idle": "2022-11-29T23:53:13.123973Z",
-     "shell.execute_reply": "2022-11-29T23:53:13.123395Z",
-     "shell.execute_reply.started": "2022-11-29T23:53:10.933313Z"
+     "iopub.execute_input": "2022-11-30T08:33:27.400792Z",
+     "iopub.status.busy": "2022-11-30T08:33:27.400501Z",
+     "iopub.status.idle": "2022-11-30T08:33:29.568261Z",
+     "shell.execute_reply": "2022-11-30T08:33:29.567511Z",
+     "shell.execute_reply.started": "2022-11-30T08:33:27.400724Z"
     },
     "tags": []
    },
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edc3d5319da544f4b70ed21e7792c45c",
+       "model_id": "959da355a9124f2982db83e895666f8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1ccff4569e14b5f9a72482b9d58424c",
+       "model_id": "31d935f3abd2437cb7bc1d436a56e7b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://public.naas.ai/cmF2ZW5lbC0yRWplcmVteS00MGdtYWlsLTJFY29t/asset/38a7f2d6d6453e5f4b7b0c8c3c8654704945e236762e467ff18227dd45dd'"
+       "'https://public.naas.ai/amVyZW15LTQwbmFhcy0yRWFp/asset/2eedd5443fc7a7fbb9f1492317736fe0d6db922126a6862420989bfdd6b7'"
       ]
      },
      "execution_count": 1,
@@ -113,7 +113,7 @@
    ],
    "source": [
     "import naas\n",
-    "naas.asset.add(\"my-website.html\",{\"inline\": True})"
+    "naas.asset.add(\"index.html\",{\"inline\": True})"
    ]
   },
   {
@@ -122,23 +122,9 @@
    "id": "7cd4c2d7-88ca-4795-92df-38c3f6f1f740",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "566c715a-03f9-4f3f-b3cc-dc1df4e50fc1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cf09d3a-a469-4022-a8c7-6d937fc7e78f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#naas.space.site.add(path=\"index.html\",dependencies=[\"style.css\",\"script.js\"], name=\"jeremy\")"
+   ]
   }
  ],
  "metadata": {
@@ -161,7 +147,45 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {},
+    "state": {
+     "31d935f3abd2437cb7bc1d436a56e7b0": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_b81275ad622c46eca900da06c4601978"
+      }
+     },
+     "58279ac035164e9d8886d1089b774751": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonStyleModel",
+      "state": {}
+     },
+     "959da355a9124f2982db83e895666f8b": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "button_style": "primary",
+       "description": "Copy URL",
+       "layout": "IPY_MODEL_a6d6c88d70c944cebc13b8d5e1fdf8d9",
+       "style": "IPY_MODEL_58279ac035164e9d8886d1089b774751"
+      }
+     },
+     "a6d6c88d70c944cebc13b8d5e1fdf8d9": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "b81275ad622c46eca900da06c4601978": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     }
+    },
     "version_major": 2,
     "version_minor": 0
    }
